--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -18,7 +18,7 @@
 <body>
 <div class="version" aria-label="2.0">
     <a id="2.0-alpha.3"></a>
-    <h1>Chamilo 2.0 alpha 3 - Aquarium, 2025-07-25</h1>
+    <h1>Chamilo 2.0 alpha 3 - Aquarium, 2025-07-26</h1>
     <h3>Release notes - summary</h3>
     <p>
         Chamilo 2.0 (stable) will be a major release, a new branch for the Chamilo software.
@@ -122,6 +122,10 @@
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-07-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/8df3316ac7077dc1a4424ad828b704788e06326c">8df3316a</a>) Language: Fix long installer language term</li>
+        <li>[2025-07-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/6700849afcf485cee4d76b6278a55dc44203e195">6700849a</a>) Install: Add support for Arabic and Dutch installer</li>
+        <li>[2025-07-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/6f18f1f59e6a7c9c517fc091e970b92d55800350">6f18f1f5</a>) Display: Switch to original name in languages selection list for installer</li>
+        <li>[2025-07-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/8ae1a65a1d5e6bbfaade9c2467f032fc62e31a81">8ae1a65a</a>) Internal: Set mailer schema to null when the mail.mailer_dsn setting is empty</li>
         <li>[2025-07-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/1ed707445104fab46497810ad980612879a131cb">1ed70744</a>) Language: Update language term related to the owner of the information of portal administrators during install</li>
         <li>[2025-07-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/21282fdf403d4a62c9698f6d12b2f2c1d7035f40">21282fdf</a>) Install: Add language resource to load terms in installer</li>
         <li>[2025-07-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/b581b5f67413da5e45ee77cd77e1d22fae78d1fa">b581b5f6</a>) Language: Remove single-quote escaping in Vue's locales</li>
