Documentation: Update changelog

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -18,7 +18,7 @@
 <body>
 <div class="version" aria-label="2.0">
     <a id="2.0-alpha.3"></a>
-    <h1>Chamilo 2.0 alpha 3 - Aquarium, 2025-07-26</h1>
+    <h1>Chamilo 2.0 alpha 3 - Aquarium, 2025-07-27</h1>
     <h3>Release notes - summary</h3>
     <p>
         Chamilo 2.0 (stable) will be a major release, a new branch for the Chamilo software.
@@ -45,7 +45,7 @@
         to us in this alpha version.
     </p>
     <h3>Release name</h3>
-    <p><a href="https://fr.wikipedia.org/wiki/Liste_des_camps_romains_d'Ast%C3%A9rix_le_Gaulois#Aquarium"></a>Aquarium (ficticious village name, see French art)</p>
+    <p><a href="https://fr.wikipedia.org/wiki/Liste_des_camps_romains_d'Ast%C3%A9rix_le_Gaulois#Aquarium"></a>Aquarium (fiction village name, see French art)</p>
 
     <h3>Security fixes</h3>
     <ul aria-live="off">
@@ -101,7 +101,7 @@
         <li>[2025-07-15] (<a href="https://github.com/chamilo/chamilo-lms/commit/552ce2969a8848a8ee3074e59993e55f87ddea91">552ce296</a> - <a href="https://task.beeznest.com/issues/22639">BT#22639</a>) Auth: Add command to synchronize user groups from Azure</li>
         <li>[2025-07-22] (<a href="https://github.com/chamilo/chamilo-lms/commit/9e2fe415f8fcb50e38cca9e0fbe83ffb08c47db4">9e2fe415</a> - <a href="https://task.beeznest.com/issues/22793">BT#22793</a>) Admin: Add bulk user assignment and removal from URLs via CSV import</li>
         <li>[2025-07-23] (<a href="https://github.com/chamilo/chamilo-lms/commit/cacb2f1c5d4a5ec2dd5ea0dfefc76add2a721641">cacb2f1c</a> - <a href="https://task.beeznest.com/issues/22793">BT#22793</a>) Admin: Add CSV user import/removal with breadcrumbs for access URLs</li>
-
+        <li>[2025-07-27] (<a href="https://github.com/chamilo/chamilo-lms/commit/01261d4069d8b9c0ff7e95f1e22582752f472015">01261d40</a>) Vendor: Add mailers 3rd party transport Amazon SES, Brevo and Mailjet</li>
     </ul>
 
     <h3>Changed</h3>
@@ -117,11 +117,13 @@
         <li>[2025-07-24] (<a href="https://github.com/chamilo/chamilo-lms/commit/8cbbf8bc7ac8356248d997b4ce1ef122d42d9add">8cbbf8bc</a>) Admin: Update legacy CSV export format to use ',' instead of ';'</li>
         <li>[2025-07-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/5d31c1c2e95819fe03e0efacbcc2d67f11305702">5d31c1c2</a> - <a href="https://task.beeznest.com/issues/22255">BT#22255</a>) Catalog: Refactor and update catalog settings (new "Catalogue" section in settings)</li>
         <li>[2025-07-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/857f97be7a3d979c49ab4b5d1b05761b1dd23afe">857f97be</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6355">GH#6355</a>) User: Switch CSV delimiter to comma for export, user update & class import</li>
+        <li>[2025-07-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/eb51aa08685a13e59049094a5e83ffb56bae42c2">eb51aa08</a>) Display: Show original language names in course creation form</li>
     </ul>
 
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-07-27] (<a href="https://github.com/chamilo/chamilo-lms/commit/64992d41865b33aef576804b23bbeef6c607a236">64992d41</a>) Vendor: update composer.lock</li>
         <li>[2025-07-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/8df3316ac7077dc1a4424ad828b704788e06326c">8df3316a</a>) Language: Fix long installer language term</li>
         <li>[2025-07-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/6700849afcf485cee4d76b6278a55dc44203e195">6700849a</a>) Install: Add support for Arabic and Dutch installer</li>
         <li>[2025-07-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/6f18f1f59e6a7c9c517fc091e970b92d55800350">6f18f1f5</a>) Display: Switch to original name in languages selection list for installer</li>
