Documentation: Fix sections numbering in security.html

--- a/public/documentation/security.html
+++ b/public/documentation/security.html
@@ -61,7 +61,7 @@ In Chamilo 2.0, we intend to send you security-related notifications through the
 <p>To  avoid being a risk to yourself and others, you should download and install a recent browser. We recommend
     <a href="https://getfirefox.com" target="_blank">the latest stable version of Firefox</a>.</p>
 
-<h2><a id="4.Files-permissions"></a>5. Restricting files permissions</h2>
+<h2><a id="4.Files-permissions"></a>4. Restricting files permissions</h2>
         <p>Making all the Chamilo files world-writable will help you install quickly, and it solves many
         issues for people without much admin experience. However, it is much more
         secure to make a distinct user owner of all the chamilo files and folders,
@@ -103,7 +103,7 @@ In Chamilo 2.0, we intend to send you security-related notifications through the
   }
         </pre>
     <br />
-<h2><a id="5.HSTS">HTTP Headers Security</a></h2>
+<h2><a id="5.HSTS">5. HTTP Headers Security</a></h2>
     <p>A valuable addition in web security, HTTP headers can be modified either
     from the web server or from the application (like Chamilo) to increase the security
         of your visitors.</p>
@@ -119,7 +119,7 @@ In Chamilo 2.0, we intend to send you security-related notifications through the
         website. If you want to read more about CSP and all related headers
         security techniques, check <a href="https://scotthelme.co.uk/">Scott Helme's blog</a>.
 
-<h2><a id="6.SSL">SSL</a></h2>
+<h2><a id="6.SSL">6. SSL</a></h2>
     <p>SSL helps you protect all communications from and to your Chamilo portal, and it is now considered such
     a fundamental piece of a website's security that it is difficult to ignore. Some features like WebRTC even limit
     their offer considerably if you don't use SSL</p>
