Install: Add LDAP PHP extension as mandatory requirement - refs BT#22300

--- a/public/documentation/installation_guide.html
+++ b/public/documentation/installation_guide.html
@@ -40,6 +40,7 @@ This version of Chamilo requires the following software stack.
       <li>iconv</li>
       <li>intl</li>
       <li>json</li>
+      <li>ldap</li>
       <li>mbstring</li>
       <li>mysql</li>
       <li>opcache</li>
@@ -49,7 +50,6 @@ This version of Chamilo requires the following software stack.
       <li>xml</li>
       <li>zip</li>
       <li>zlib</li>
-      <li>ldap (optional)</li>
       <li>redis (optional)</li>
       <li>xapian (optional)</li>
   </ul>
