Documentation: Update changelog for Alpha 4

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -98,6 +98,14 @@
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-09-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/8b479c4006b2e88086643fa1e4dc6e54364d1db4">8b479c40</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6686">GH#6686</a>) Plugin: Remove references to tool_enabled form input and language terms in all plugins</li>
+        <li>[2025-09-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/89ac1eb4ac3f549b8e76e763436714212f36ba4a">89ac1eb4</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6686">GH#6686</a>) Plugin: Remove "enabled" settings from plugins and update api_get_plugin_setting() to keep backwards compatibility</li>
+        <li>[2025-09-06] (<a href="https://github.com/chamilo/chamilo-lms/commit/e762d41b02d0cb7fc58d123cb403aedf77d6ce21">e762d41b</a>) Documentation: Update changelog</li>
+        <li>[2025-09-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/625eb59e34f1c4a8f8aeb71ca33983936a539cd4">625eb59e</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/22912">GH#22912</a>) Exercise: Fix open question answer not saved</li>
+        <li>[2025-09-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/18dce9b75052d2e9d468b52f9cd52cffc510097a">18dce9b7</a>) Exercise: Fix session visibility (teachers see hidden)</li>
+        <li>[2025-09-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/2e1586ce15e1182f0203cb6f147e9ab40f556c70">2e1586ce</a>) Admin: Settings: Insert disable_gdpr & show_conditions_to_user (titles/comments) + link value template</li>
+        <li>[2025-09-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/85eed1320b53d3d66632fae76d252a84dc6502fa">85eed132</a>) Admin: Settings: add title/comment for disable_gdpr</li>
+        <li>[2025-09-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/aee74e07d253d723528707ebe4d2c97ebfd2724e">aee74e07</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6682">GH#6682</a>) Admin: AI helpers: DB migrations + EU AI Act notice on settings page</li>
         <li>[2025-09-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/fb8115c7b27e11f0cb7e0a9b63771a63306275f2">fb8115c7</a> - <a href="https://task.beeznest.com/issues/22883">BT#22883</a>) Tracking: #fix function call parameter from 1.11.x that do not exist in master and now generates errors beacause of commit 888b5e7256e</li>
         <li>[2025-09-05] (<a href="https://github.com/chamilo/chamilo-lms/commit/d96235c619511d2f943d77d56a598d1b4ddbef53">d96235c6</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6685">GH#6685</a>) Plugin: OnlyOffice: Access-URL config, demo toggle & connection test</li>
         <li>[2025-09-04] (<a href="https://github.com/chamilo/chamilo-lms/commit/a32343a78701822fa2919cecb4456d563c0fe4d3">a32343a7</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6684">GH#6684</a>) Exercise: Add file to migrate c_quiz.active</li>
