Documentation: Update changelog for alpha.5

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -64,6 +64,7 @@
         <li>[2025-09-18] (<a href="https://github.com/chamilo/chamilo-lms/commit/78563da78756450d9a077afa269b8679ee595703">78563da7</a> - <a href="https://task.beeznest.com/issues/22300">BT#22300</a>) Auth: Allow authentication through LDAP in login form</li>
         <li>[2025-09-23] (<a href="https://github.com/chamilo/chamilo-lms/commit/13c46594dcaecafc64f44146644cc55d77e0c36a">13c46594</a>) Security: add security.2fa_enable; hide 2FA UI & skip MFA when disabled</li>
         <li>[2025-09-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/a9fb3e46405ea10db4a128bda82db9567f7bb4df">a9fb3e46</a>) Auth: Add config param to force one login method only</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/c4ec0b465d9166afaa671ad9ad357e9d11847d07">c4ec0b46</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6145">GH#6145</a>) Plugin: BigBlueButton: add default callback to report meeting activity</li>
     </ul>
 
     <h3>Changed</h3>
@@ -76,6 +77,19 @@
     <h3>Fixed</h3>
 
     <ul aria-live="off">
+        <li>[2025-09-27] (<a href="https://github.com/chamilo/chamilo-lms/commit/34dab6fad85fc9a30453c21a99f7e458c62d15ab">34dab6fa</a>) Documentation: Update changelog for alpha.5</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/a912253c7851c41dec60b3e586ad82476c866524">a912253c</a>) Dropbox: Minor, fix error typo in query</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/772f7b089dc35d58c197c1c50f97c4f78bb9d2a0">772f7b08</a>) Dropbox: Stabilize migrations and tool seeding</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/25fde614daa4ec5c341f4203075264634cab4e6f">25fde614</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6757">GH#6757</a>) Dropbox: fix self-receive, recipients display, sender label, icon alignment, and default “Sent” redirect</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/3904c499988663dd0f7ad0be83da0f4d91642663">3904c499</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6757">GH#6757</a>) Dropbox: Fix migration: use getReference for Tool seeding</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/5efc841ba613de888a2ecc0adeadf701dbc73293">5efc841b</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6796">GH#6796</a>) Admin: Languages: unify toggle icon dimensions</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/5f5bd9db4566d2b050c8d0a7672c745a76390c96">5f5bd9db</a>) Auth: Fix filter to check auth_sources in login process</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/1e715415bc05a9f9be974ddf3886aa3bb18c2b6d">1e715415</a> - <a href="https://task.beeznest.com/issues/20864">BT#20864</a>) Migration: #fix not to rename po files that are now well named in Version20240122221400</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/8853c4140f5ec7620c0d876015012f7126be03ac">8853c414</a> - <a href="https://task.beeznest.com/issues/22971">BT#22971</a>) Ticket: #fix when status is transfered the ticket can be edited and when it is closed only admin can edit it</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/bd7dad17345f151dddc2483e684e894903c50e0e">bd7dad17</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6757">GH#6757</a>) Dropbox: Restore dropbox tool</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/5330e2d522e972aff64ec34cfe6624f1ca92b43d">5330e2d5</a> - <a href="https://task.beeznest.com/issues/20864">BT#20864</a>) Migration: #fix version migration order to avoid errors</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/35d56d2db001bc3ecc965149633aa291da7ab651">35d56d2d</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/22987">GH#22987</a>) User: purge extra fields on delete + orphan cleanup migration</li>
+        <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/7ae621d481ad23f06249e6abb62fa6eea7bb64f4">7ae621d4</a>) Documentation: Update README.md - Add Digital Public Goods shield</li>
         <li>[2025-09-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/44ebe88fe8da0754fd853ba34a4a3087dc5cbdd2">44ebe88f</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6796">GH#6796</a>) Admin: Proper MDI toggle (on/off) without disabled class in languages list</li>
         <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/6eaef8cd4d67cbb56538fe84d0eae29079164860">6eaef8cd</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6796">GH#6796</a>) Admin: Fix default platform language saving through button</li>
         <li>[2025-09-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/339ab01e995adc5cc865235566faed0d087c27d3">339ab01e</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6796">GH#6796</a>) Admin: Fix call to undefined html_filter() in languages.php</li>
