Install: Remove LDAP PHP extension requirement: only needed for LDAP use or if installing from sources - refs BT#22300

--- a/public/documentation/installation_guide.html
+++ b/public/documentation/installation_guide.html
@@ -40,16 +40,17 @@ This version of Chamilo requires the following software stack.
       <li>iconv</li>
       <li>intl</li>
       <li>json</li>
-      <li>ldap</li>
       <li>mbstring</li>
       <li>mysql</li>
       <li>opcache</li>
       <li>pcre</li>
       <li>session (php-session, usually shipped with PHP)</li>
       <li>soap</li>
+      <li>sodium</li>
       <li>xml</li>
       <li>zip</li>
       <li>zlib</li>
+      <li>ldap (optional, but mandatory in dev env)</li>
       <li>redis (optional)</li>
       <li>xapian (optional)</li>
   </ul>
